correccion url logo

--- a/src/app/componentes/login/login.page.html
+++ b/src/app/componentes/login/login.page.html
@@ -4,7 +4,7 @@
       <!-- <img src="../../../assets/nombre.png" alt=""> -->
       Sebastian Pasquini
     </div>
-    <img id="imagen" src="../../../assets/logo.png">
+    <img id="imagen" src="assets/icon/icon.png">
     <div class="Aligner-item Aligner-item--bottom">
       <!-- <img src="../../../assets/division.png" alt=""> -->
       4 B
