--- a/src/app/componentes/login/login.page.html
+++ b/src/app/componentes/login/login.page.html
@@ -1,33 +1,39 @@
 <div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
   <div class="flb">
     <div class="Aligner-item Aligner-item--top">
-      <!-- <img src="../../../assets/nombre.png" alt=""> -->
-      Sebastian Pasquini
+      <img src="assets/nombre.png" alt="">
     </div>
     <img id="imagen" src="assets/icon/icon.png">
     <div class="Aligner-item Aligner-item--bottom">
-      <!-- <img src="../../../assets/division.png" alt=""> -->
-      4 B
+      <img src="assets/division.png" alt="">
     </div>
   </div>
 </div>
 
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="lightGreenBlue">
     <ion-title text-center>Iniciar sesion</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <img src="assets/icon/icon.png" alt="" class="icon">
-<ion-item>
-  <ion-label position="floating">Correo electrónico</ion-label> 
-  <ion-input type="text" [(ngModel)]="email" name="email"></ion-input>
-</ion-item>
-<ion-item>
-  <ion-label position="floating">Contraseña</ion-label> 
-  <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
-</ion-item>
-<br>
-<ion-button expand="block" (click) = "onSubmitLogin()">Entrar</ion-button>
+<ion-content padding color="dark">
+  <img src="assets/icon/icon.png" alt="" class="icon" style="margin-top: 5%;">
+  <ion-label [hidden]='datosCorrectos' class="datos-incorrectos">Datos incorrectos</ion-label>
+  <ion-item color="dark">
+    <ion-label position="floating">Correo electrónico</ion-label> 
+    <ion-input type="text" [(ngModel)]="correo" name="correo"></ion-input>
+  </ion-item>
+  <ion-item color="dark">
+    <ion-label position="floating">Contraseña</ion-label> 
+    <ion-input type="password" [(ngModel)]="clave" name="clave"></ion-input>
+  </ion-item>
+  <br>
+  <ion-button expand="block" (click) = "onSubmitLogin()" color="lightGreenBlue">Entrar</ion-button>
+
+  <ion-item color="dark">
+    <ion-label position="stacked">Usuario</ion-label>
+    <ion-select (ionChange)="onChange($event.target.value)" placeholder="Seleccione uno: ">
+      <ion-select-option *ngFor="let usuario of usuarios" value={{usuario.id}}> {{usuario.nombre}} </ion-select-option>
+    </ion-select>
+  </ion-item>
 </ion-content>
